--- a/public/package.json
+++ b/public/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
+    "antd": "^4.8.5",
     "bootstrap": "^4.5.3",
     "express": "^4.17.1",
     "prop-types": "^15.7.2",
